--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
                 <div class="edu-exp-block">
                     <h3>EDUCATION</h3>
                     <div class="timeline-item">
-                        <h4>Master of Design</h4>
-                        <div class="period">2016 - 2018</div>
-                        <p>New York University, USA</p>
-                        <p>Specialized in Interaction Design and User Experience</p>
+                        <h4>12th Class</h4>
+                        <div class="period">2021 - 2022</div>
+                        <p>Shaheed Sipahi Sandeep Singh Government Senior Secondary Smart School</p>
+                        <p>Non-Madical with Mathematics, Physics and Chemistry</p>
                     </div>
                     <div class="timeline-item">
-                        <h4>Bachelor of Arts</h4>
-                        <div class="period">2012 - 2016</div>
-                        <p>University of California, Berkeley</p>
-                        <p>Major in Visual Communication Design</p>
+                        <h4>Bachelor of Engineering</h4>
+                        <div class="period">2022 - 2026</div>
+                        <p>Baba Farid Collage of Engineering and Technology, Bathinda</p>
+                        <p>Computer Science Engineering</p>
                     </div>
                 </div>
 
@@ -169,16 +169,23 @@
                 <div class="edu-exp-block">
                     <h3>EXPERIENCE</h3>
                     <div class="timeline-item">
-                        <h4>Senior UX/UI Designer</h4>
-                        <div class="period">2020 - Present</div>
-                        <p>Tech Innovations Inc., New York</p>
-                        <p>Leading design team for mobile and web applications</p>
+                        <h4>Freelance UI/UX Designer</h4>
+                        <div class="period">2024 – Present</div>
+<!--                         <p>Tech Innovations Inc., New York</p> -->
+                        <p>Worked on multiple self-initiated projects including mobile apps, landing pages, and dashboard designs. Focused on user flows, wireframes, and responsive UI components.</p>
                     </div>
                     <div class="timeline-item">
-                        <h4>UX Designer</h4>
+                        <h4>UI/UX Design Intern (Remote)</h4>
                         <div class="period">2018 - 2020</div>
-                        <p>Digital Solutions LLC, San Francisco</p>
-                        <p>Designed user interfaces for enterprise software</p>
+<!--                         <p>Digital Solutions LLC, San Francisco</p> -->
+                        <p>Designed prototype interfaces for a student startup. Created user flows, wireframes, and high-fidelity mockups using Figma.</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h4>Academic Projects</h4>
+                        <div class="period">2023 – 2024</div>
+<!--                         <p>Digital Solutions LLC, San Francisco</p> -->
+                        <p><strong>Food Delivery App UI: </strong> Designed a complete UI/UX for a food delivery app focusing on user-friendly ordering and real-time tracking.</p>
+                        <p><strong>Music Streaming App UI:</strong> Created an intuitive and visually rich interface for a conceptual music app using mobile-first design.</p>
                     </div>
                 </div>
             </div>
@@ -515,5 +522,6 @@
 
    
 </body>
+
 
 </html>
