--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="timeline-item">
                         <h4>UI/UX Design Intern (Remote)</h4>
-                        <div class="period">2018 - 2020</div>
+                        <div class="period">Feb 2024 – May 2024</div>
 <!--                         <p>Digital Solutions LLC, San Francisco</p> -->
                         <p>Designed prototype interfaces for a student startup. Created user flows, wireframes, and high-fidelity mockups using Figma.</p>
                     </div>
@@ -525,3 +525,4 @@
 
 
 </html>
+
