--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a href="https://www.instagram.com/graphicswithdeep/"><i class="fab fa-instagram"></i></a>
                         <!-- <a href="#"><i class="fab fa-dribbble"></i></a> -->
                         <a href="https://wa.me/7814605757"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://github.com/graphicswithdeep"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Deep9855/"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 hero-image">
@@ -484,9 +484,9 @@
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/sandeepsinghroy/"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.instagram.com/graphicswithdeep/"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-dribbble"></i></a>
+<!--                         <a href="#"><i class="fab fa-dribbble"></i></a> -->
                         <a href="https://wa.me/78146 05757"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://github.com/graphicswithdeep"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Deep9855/"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
 
@@ -525,4 +525,5 @@
 
 
 </html>
+
 
