--- a/index.html
+++ b/index.html
@@ -519,11 +519,57 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/script.js"></script>
+    
+    <!-- EmailJS SDK
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        // Initialize EmailJS
+        (function () {
+            emailjs.init("j1G6vDx4oKym-aSbf"); // Replace with your EmailJS Public Key
+        })();
+
+        document.getElementById("contact-form").addEventListener("submit", function (event) {
+            event.preventDefault();
+
+            emailjs.sendForm("service_ivtz23g", "template_ppxe5zx", this)
+                .then(function () {
+                    document.getElementById("success-message").style.display = "block";
+                    document.getElementById("contact-form").reset();
+                    console.log("✅ Message sent successfully!");
+                }, function (error) {
+                    alert("❌ Failed to send message. Please try again later.");
+                    console.error("EmailJS error:", error);
+                });
+        });
+    </script> -->
+    <!-- EmailJS v4 SDK -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function () {
+            emailjs.init("j1G6vDx4oKym-aSbf"); // Replace with your EmailJS Public Key
+        })();
+    </script>
+    <script>
+        document.getElementById('contact-form').addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            emailjs.sendForm("service_ivtz23g", "template_ppxe5zx", this)
+                .then(function (response) {
+                    alert("Email sent successfully!");
+                }, function (error) {
+                    alert("FAILED... " + JSON.stringify(error));
+                });
+
+
+        });
+    </script>
+
 
    
 </body>
 
 
 </html>
+
 
 
